--- a/src/styles/blocks/event-card.less
+++ b/src/styles/blocks/event-card.less
@@ -22,12 +22,12 @@
         overflow: hidden;
     }
 
-/* .event-card__picture::after {
-    content: "";
-    display: block;
-    width: 100%;
-    padding-top: 107.16%;
-} */
+    &__picture::after {
+        content: "";
+        display: block;
+        width: 100%;
+        padding-top: 107.16%;
+    }
 
     &__img {
         display: block;
