--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -27,3 +27,13 @@
 @import "blocks/page-footer.less";
 
 @import "global/mixins.less";
+
+@import "blocks/field.less";
+
+@import "blocks/radio.less";
+
+@import "blocks/check.less";
+
+@import "blocks/pp.less";
+
+@import "blocks/form.less";
