--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -37,3 +37,11 @@
 @import "blocks/pp.less";
 
 @import "blocks/form.less";
+
+@import "blocks/table.less";
+
+@import "blocks/ok.less";
+
+@import "blocks/article.less";
+
+@import "blocks/content.less";
