last version site

--- a/src/styles/blocks/content.less
+++ b/src/styles/blocks/content.less
@@ -56,14 +56,19 @@
     p {
       margin: 20px 0;
       font-family: @font1;
+      max-width: 868px;
       
       &:first-child {
         margin-top: 0;
       }
 
       &:last-child {
-        margin-bottom: 0;
+        margin-bottom: 70px;
       }
+    }
+
+    p {
+      margin-bottom: 70px;
     }
 
     ul,
@@ -114,7 +119,7 @@
       margin: 0 0 8px;
       cursor: default;
       &:last-child {
-        margin-bottom: 0;
+        margin-bottom: 70px;
       }
     }
     
