created all pages with adaptive without js

--- a/src/styles/blocks/event-card.less
+++ b/src/styles/blocks/event-card.less
@@ -67,8 +67,10 @@
     }
 
     &__title:hover{
-        color: @red;
-        text-decoration-color: @red;
+        @media (hover: hover){
+            color: @red;
+            text-decoration-color: @red;
+        }
     }
 
     &__description {
