--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -4,7 +4,7 @@
     flex-direction: column;
     width: 100%;
     max-width: 1414px;
-    margin: 0 auto;
+    margin: 0 auto 93px;
     padding-left: 40px;
     padding-right: 40px;
 
@@ -65,13 +65,43 @@
         }
     }
 
-    &__link{
+    &__link {
         font-family: @font1;
         font-weight: 600;
         align-self: flex-end;
         color: @black;
         width: 109px;
         height: 16px;
-        text-decoration: none; 
+        text-decoration: none;
+        margin-top: 85px;
+
+        &:hover {
+            @media (hover: hover){
+                color: @red;
+            }
+        }
+    }
+
+    &__table-title {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 21.79px;
+        text-align: left;
+        max-width: 868px;
+        height: auto;
+        margin: 0;
+        padding-bottom: 60px;
+
+        @media @bw1340 {
+            max-width: 829px;
+        }
+
+        @media @bw768 {
+            padding-bottom: 50px;
+        }
+
+        @media @bw600 {
+            padding-bottom: 30px;
+        }
     }
 }
