--- a/src/styles/blocks/page-header.less
+++ b/src/styles/blocks/page-header.less
@@ -18,28 +18,29 @@
         height: 70px;
     }
 
-    &::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: fade(@gray, 98%);
+    // &::before {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: fade(@gray, 98%);
     
-        @supports (backdrop-filter: blur(20px)) {
-          background-color: fade(@gray, 70%);
-          backdrop-filter: blur(20px);
-        }
+    //     @supports (backdrop-filter: blur(20px)) {
+    //       background-color: fade(@gray, 70%);
+    //       backdrop-filter: blur(20px);
+    //     }
     
-      &__container {
+    // }
+
+    &__container {
         .container;
         position: relative;
         display: flex;
         align-items: center;
         z-index: 1;
-      }
     }
 
     &__logo{
@@ -67,13 +68,6 @@
         height: 100%;
     }
 
-    &__container{
-        .container();
-        
-        display: flex;
-        align-items: center;
-    }
-
     &__nav{
         box-sizing: border-box;
         display: flex;
@@ -92,8 +86,8 @@
             background-color: fade(@gray, 98%);
             transition: transform 0.4s;
             transform: translateX(-100%);
-            overflow-x: hidden;
-            overflow-y: auto;
+            // overflow-x: hidden;
+            // overflow-y: auto;
 
             @supports (backdrop-filter: blur(20px)) {
                 background-color: fade(@gray, 70%);
@@ -131,6 +125,7 @@
           margin-top: 20px;
         }
     }
+
     &__nav-user-link {
         color: @black;
         text-decoration: none;
@@ -139,7 +134,9 @@
         font-size: 16px;
         line-height: 22px;
         &:hover{
-            color: @red_dark;
+            @media (hover: hover) {
+                color: @red_dark;
+            }
         }
     }
     
@@ -168,11 +165,13 @@
     }
 
     &__nav-link:active{
-        color: @red;
+        color: @red_dark;
     }
 
     &__nav-link:hover{
-        color: @red;
+        @media (hover: hover) {
+            color: @red;
+        }
     }
 
     &__user-btn{
@@ -205,22 +204,18 @@
             background: none;
             color: @black;
             font-size: 0;
-          }
-          &:hover {
-            background-color: @black;
-            color: @white;
-            
-            @media @bw1020 {
-              background: none;
-              color: @red;
+        }
+        &:hover {
+            @media (hover: hover) {
+                background-color: @black;
+                color: @white;
+                
+                @media @bw1020 {
+                background: none;
+                color: @red;
+                }
             }
         }
-    }
-
-    &__user-btn:hover{
-        background-color: @black;
-        color: @white;
-
     }
 
     &__user-icon {
@@ -263,6 +258,7 @@
           border-radius: 2px;
           background-color: @black;
           transform-origin: 50% 50%;
+          transition: transform 0.4s, box-shadow 0.4s;
         }
         &::before {
           top: 13px;
