--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -1,3 +1,6 @@
+@bw500: ~"(max-width: 499px)";
+@w500: ~"(min-width: 500px)";
+
 @bw600: ~"(max-width: 599px)";
 @w600: ~"(min-width: 600px)";
 
@@ -10,11 +13,15 @@
 @bw1020: ~"(max-width: 1019px)";
 @w1020: ~"(min-width: 1020px)";
 
+@bw1170: ~"(max-width: 1169px)";
+
 @bw1340: ~"(max-width: 1339px)";
 @w1340: ~"(max-width: 1340px)";
 
 @bw1660: ~"(max-width: 1659px)";
 @w1660: ~"(min-width: 1660px)";
+
+@full-hd: ~"(min-width: 1920px)";
 
 // Цветовая палитра
 @white: #ffffff;
