--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -1,3 +1,5 @@
+@bw400: ~"(max-width: 399px)";
+
 @bw500: ~"(max-width: 499px)";
 @w500: ~"(min-width: 500px)";
 
@@ -28,8 +30,10 @@
 @black: #1f1e1e;
 @red: #bc3324;
 @red_dark: #a51505;
+@dark_red: #a51505;
 @gray: #dedede;
 @gray_dark: #bfbfbf;
+@light_gray: #dedede; /*gray*/
 // Шрифты
 @font1: "Open Sans", sans-serif;
 @font2: "Lora", serif;
