--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,9 +1,19 @@
+@import "global/normalize.less";
 @import "global/variables.less";
 @import "global/mixins.less";
 @import "global/fonts.less";
 @import "global/common.less";
 
-// @import "vendor/swiper.less";
+@import "vendor/toastr.less";
+
+@import "vendor/swiper.less";
+@import "vendor/swiper_theme.less";
+
+@import "vendor/selectric.less";
+@import "vendor/selectric_theme.less";
+
+@import "vendor/air-datepicker.less";
+@import "vendor/air-datepicker_theme.less";
 
 @import "blocks/btn.less";
 @import "blocks/check.less";
@@ -44,3 +54,4 @@
 @import "blocks/event.less";
 
 @import "blocks/ok.less";
+@import "blocks/upcoming.less";
